--- a/erp.cabal
+++ b/erp.cabal
@@ -24,9 +24,10 @@ cabal-version : >= 1.6
 library
   build-depends : base, acid-state, websockets, mtl,
                  containers, safecopy
-                 , text
+                 , text, async
 executable erp
   main-is: src/server/server.hs
   build-depends: base, acid-state, websockets, mtl, containers
                  , safecopy
                  , text
+                 , async
