--- a/erp.cabal
+++ b/erp.cabal
@@ -18,20 +18,37 @@ Category: Business Application
 
 Build-type: Simple
 
-cabal-version : >= 1.6
+cabal-version : >= 1.16
+extra-source-files: testsuite/tests/TestRunner.hs
 
 library
+  default-language: Haskell2010
   build-depends: base, acid-state, websockets, mtl,
                  containers, safecopy
                  , text, async
   hs-source-dirs: ., src/server, testsuite/tests
-  exposed-modules:  ErpServer
+  exposed-modules:  ErpServer,ErpModel
 
 executable erp
+  default-language: Haskell2010
   main-is: Main.hs
   hs-source-dirs: ., src/server, testsuite/tests
   build-depends: base, acid-state, websockets, mtl, containers
                  , safecopy
                  , text
                  , async
-                 
+
+Test-suite tests
+  Type: exitcode-stdio-1.0
+  default-language: Haskell2010
+  Hs-source-dirs: testsuite/tests	                  
+  Main-is: TestRunner.hs
+  Build-depends: base, acid-state, websockets, mtl, containers
+                 , safecopy
+                 , erp
+                 , text
+                 , async
+                 , test-framework
+                 , test-framework-quickcheck2
+                 , QuickCheck
+                 , random
