--- a/erp.cabal
+++ b/erp.cabal
@@ -21,15 +21,21 @@ Build-type: Simple
 cabal-version : >= 1.16
 extra-source-files: testsuite/tests/TestRunner.hs
 
-library
+library      
+  GHC-options: +RTS 
   default-language: Haskell2010
   build-depends: base, acid-state, websockets, mtl,
                  containers, safecopy
                  , text, async
   hs-source-dirs: ., src/server, testsuite/tests
   exposed-modules:  ErpServer,ErpModel
+  default-extensions: OverloadedStrings, CPP
+     , DeriveDataTypeable
+     , TypeFamilies
+     , TemplateHaskell
 
 executable erp
+  GHC-options: +RTS
   default-language: Haskell2010
   main-is: Main.hs
   hs-source-dirs: ., src/server, testsuite/tests
@@ -37,12 +43,22 @@ executable erp
                  , safecopy
                  , text
                  , async
+  default-extensions: OverloadedStrings, CPP
+     , DeriveDataTypeable
+     , TypeFamilies
+     , TemplateHaskell
 
 Test-suite tests
   Type: exitcode-stdio-1.0
+  
   default-language: Haskell2010
-  Hs-source-dirs: testsuite/tests	                  
+  Hs-source-dirs: testsuite/tests                    
   Main-is: TestRunner.hs
+  default-extensions: OverloadedStrings, CPP
+     , DeriveDataTypeable
+     , TypeFamilies
+     , TemplateHaskell
+  GHC-options: +RTS 
   Build-depends: base, acid-state, websockets, mtl, containers
                  , safecopy
                  , erp
