--- a/erp.cabal
+++ b/erp.cabal
@@ -26,14 +26,16 @@ library
   default-language: Haskell2010
   build-depends: base, acid-state, websockets, mtl,
                  containers, safecopy
-                 , text, async
+                 , text, async, aeson
   hs-source-dirs: ., src/server, testsuite/tests
   exposed-modules:  ErpServer,ErpModel
   default-extensions: OverloadedStrings, CPP
      , DeriveDataTypeable
      , TypeFamilies
      , TemplateHaskell
-
+     , TypeSynonymInstances
+     , FlexibleInstances
+     , DeriveGeneric
 executable erp
   GHC-options: +RTS
   default-language: Haskell2010
@@ -43,11 +45,14 @@ executable erp
                  , safecopy
                  , text
                  , async
+                 , aeson
   default-extensions: OverloadedStrings, CPP
      , DeriveDataTypeable
      , TypeFamilies
      , TemplateHaskell
-
+     , FlexibleInstances
+     , TypeSynonymInstances
+     , DeriveGeneric
 Test-suite tests
   Type: exitcode-stdio-1.0
   
@@ -58,6 +63,9 @@ Test-suite tests
      , DeriveDataTypeable
      , TypeFamilies
      , TemplateHaskell
+     , TypeSynonymInstances  
+     , FlexibleInstances
+     , DeriveGeneric
   GHC-options: +RTS 
   Build-depends: base, acid-state, websockets, mtl, containers
                  , safecopy
@@ -68,3 +76,4 @@ Test-suite tests
                  , test-framework-quickcheck2
                  , QuickCheck
                  , random
+                 , aeson
