--- a/erp.cabal
+++ b/erp.cabal
@@ -28,8 +28,11 @@ library
                  containers, safecopy
                  , text, async, aeson
                  , time
+                 , url
   hs-source-dirs: ., src/server, testsuite/tests, src/common, src/client
   exposed-modules:  ErpServer,ErpModel, Login, Account, Company, Currency, FiscalYear, Entity
+                    , AccountAsset
+                    , Bank
   default-extensions: OverloadedStrings, CPP
      , DeriveDataTypeable
      , TypeFamilies
@@ -42,13 +45,15 @@ executable erp
   GHC-options: +RTS
   default-language: Haskell2010
   main-is: Main.hs
-  hs-source-dirs: ., src/server, testsuite/tests, src/common, src/client
+  -- hs-source-dirs: ., src/server, testsuite/tests, src/common, src/client
   build-depends: base, acid-state, websockets, mtl, containers
                  , safecopy
                  , text
                  , async
                  , aeson
                  , time
+                 , erp
+                 , url
   default-extensions: OverloadedStrings, CPP
      , DeriveDataTypeable
      , TypeFamilies
@@ -62,13 +67,15 @@ executable erp_ui
   GHC-options: +RTS
   default-language: Haskell2010
   main-is: Main.hs
-  hs-source-dirs: ., src/server, testsuite/tests, src/common, src/client
+  -- hs-source-dirs: ., src/server, testsuite/tests, src/common, src/client
   build-depends: base, acid-state, websockets, mtl, containers
                  , safecopy
                  , text
                  , async
                  , aeson
                  , time
+                 , erp
+                 , url
   default-extensions: OverloadedStrings, CPP
      , DeriveDataTypeable
      , TypeFamilies
@@ -104,3 +111,4 @@ Test-suite tests
                  , random
                  , aeson
                  , time
+                 , url
