--- a/erp.cabal
+++ b/erp.cabal
@@ -22,7 +22,7 @@ cabal-version : >= 1.16
 extra-source-files: testsuite/tests/TestRunner.hs
 
 library      
-  GHC-options: +RTS 
+  GHC-options: +RTS -sstderr
   default-language: Haskell2010
   build-depends: base, acid-state, websockets, mtl,
                  containers, safecopy
@@ -30,6 +30,7 @@ library
                  , time
                  , url
                  , hslogger
+                 , directory
   hs-source-dirs: ., src/server, testsuite/tests, src/common, src/client
   exposed-modules:  ErpServer,ErpModel, Login, Account, Company, Currency, FiscalYear, Entity
                     , AccountAsset
@@ -46,7 +47,7 @@ library
      , DeriveGeneric
      , NoMonomorphismRestriction
 executable erp
-  GHC-options: +RTS
+  GHC-options: +RTS -sstderr
   default-language: Haskell2010
   main-is: Main.hs
   -- hs-source-dirs: ., src/server, testsuite/tests, src/common, src/client
@@ -59,6 +60,7 @@ executable erp
                  , erp
                  , url
                  , hslogger
+                 , directory
   default-extensions: OverloadedStrings, CPP
      , DeriveDataTypeable
      , TypeFamilies
@@ -70,7 +72,7 @@ executable erp
      , NoMonomorphismRestriction
 
 executable erp_ui
-  GHC-options: +RTS
+  GHC-options: +RTS -sstderr
   default-language: Haskell2010
   main-is: Main.hs
   -- hs-source-dirs: ., src/server, testsuite/tests, src/common, src/client
@@ -82,6 +84,7 @@ executable erp_ui
                  , time
                  , erp
                  , url
+                 , directory
   default-extensions: OverloadedStrings, CPP
      , DeriveDataTypeable
      , TypeFamilies
@@ -106,7 +109,7 @@ Test-suite tests
      , FlexibleInstances
      , DataKinds
      , DeriveGeneric
-  GHC-options: +RTS 
+  GHC-options: -rtsopts
   Build-depends: base, acid-state, websockets, mtl, containers
                  , safecopy
                  , erp
@@ -119,3 +122,4 @@ Test-suite tests
                  , aeson
                  , time
                  , url
+                 , directory
