--- a/erp.cabal
+++ b/erp.cabal
@@ -22,7 +22,7 @@ cabal-version : >= 1.16
 extra-source-files: testsuite/tests/TestRunner.hs
 
 library      
-  GHC-options: +RTS -sstderr
+  GHC-options: -fhpc
   default-language: Haskell2010
   build-depends: base, acid-state, websockets, mtl,
                  containers, safecopy
@@ -48,7 +48,7 @@ library
      , DeriveGeneric
      , NoMonomorphismRestriction
 executable erp
-  GHC-options: +RTS -sstderr
+  GHC-options: -fhpc
   default-language: Haskell2010
   main-is: Main.hs
   -- hs-source-dirs: ., src/server, testsuite/tests, src/common, src/client
@@ -74,7 +74,7 @@ executable erp
      , NoMonomorphismRestriction
 
 executable erp_ui
-  GHC-options: +RTS -sstderr
+  GHC-options:
   default-language: Haskell2010
   main-is: Main.hs
   -- hs-source-dirs: ., src/server, testsuite/tests, src/common, src/client
@@ -112,7 +112,7 @@ Test-suite tests
      , FlexibleInstances
      , DataKinds
      , DeriveGeneric
-  GHC-options: -rtsopts
+  GHC-options: -rtsopts -fhpc
   Build-depends: base, acid-state, websockets, mtl, containers
                  , safecopy
                  , erp
