--- a/erp.cabal
+++ b/erp.cabal
@@ -18,6 +18,7 @@ library
                    mtl -any, containers -any, safecopy -any, text -any, async -any,
                    aeson -any, time -any, url -any, hslogger -any, directory -any,
                    datetime -any
+                   , hspec >= 1.9.2
     exposed-modules: ErpError ErpServer ErpModel Login Account Company
                      Currency FiscalYear Entity AccountAsset Bank Product Carrier
     exposed: True
@@ -35,6 +36,7 @@ executable erp
                    mtl -any, containers -any, safecopy -any, text -any, async -any,
                    aeson -any, time -any, erp -any, url -any, hslogger -any,
                    directory -any, datetime -any
+                   , hspec >= 1.9.2
     main-is: Main.hs
     buildable: True
     default-language: Haskell2010
@@ -49,6 +51,7 @@ executable erp_ui
                    mtl -any, containers -any, safecopy -any, text -any, async -any,
                    aeson -any, time -any, erp -any, url -any, directory -any,
                    datetime -any
+                   , hspec >= 1.9.2
     main-is: Main.hs
     buildable: True
     default-language: Haskell2010
@@ -64,6 +67,7 @@ test-suite tests
                    async -any, test-framework -any, test-framework-quickcheck2 -any,
                    QuickCheck -any, random -any, aeson -any, time -any, url -any,
                    directory -any, datetime -any
+                   , hspec >= 1.9.2
     type: exitcode-stdio-1.0
     main-is: TestRunner.hs
     buildable: True
