--- a/erp.cabal
+++ b/erp.cabal
@@ -19,6 +19,7 @@ library
                     , websockets >= 0.8.2.0
                     , mtl >= 2.1.2
                     , containers -any
+                    , unordered-containers >= 0.2.3.0
                     , safecopy >= 0.8.2
                     , text >= 0.11.3.1
                     , async >= 2.0.1.4
@@ -47,6 +48,7 @@ executable erp
                     , websockets >= 0.8.2.0
                     , mtl >= 2.1.2
                     , containers -any
+                    , unordered-containers >= 0.2.3.0
                     , safecopy >= 0.8.2
                     , text >= 0.11.3.1
                     , async >= 2.0.1.4
@@ -74,6 +76,7 @@ executable erp_ui
                     , websockets >= 0.8.2.0
                     , mtl >= 2.1.2
                     , containers -any
+                    , unordered-containers >= 0.2.3.0
                     , safecopy >= 0.8.2
                     , text >= 0.11.3.1
                     , async >= 2.0.1.4
@@ -101,6 +104,7 @@ test-suite tests
                     , websockets >= 0.8.2.0
                     , mtl >= 2.1.2
                     , containers -any
+                    , unordered-containers >= 0.2.3.0
                     , safecopy >= 0.8.2
                     , text >= 0.11.3.1
                     , async >= 2.0.1.4
