--- a/erp.cabal
+++ b/erp.cabal
@@ -14,22 +14,12 @@ data-dir: ""
 extra-source-files: testsuite/tests/TestRunner.hs
 
 library
-    build-depends:    base -any
-                    , acid-state >= 0.12.1
-                    , websockets >= 0.8.2.0
-                    , mtl >= 2.1.2
-                    , containers -any
-                    , unordered-containers >= 0.2.3.0
-                    , safecopy >= 0.8.2
-                    , text >= 0.11.3.1
-                    , async >= 2.0.1.4
-                    , aeson >= 0.7.0.2
-                    , time >= 1.4.0.1
-                    , url >= 2.1.3
-                    , hslogger >= 1.2.3
-                    , directory >= 1.2.0.1
-                    , datetime >= 0.2.1
-                    , hspec >= 1.9.2
+    build-depends: base -any, acid-state >=0.12.1,
+                   websockets >=0.8.2.0, mtl >=2.1.2, containers -any,
+                   unordered-containers >=0.2.3.0, safecopy >=0.8.2, text >=0.11.3.1,
+                   async >=2.0.1.4, aeson >=0.7.0.2, time >=1.4.0.1, url >=2.1.3,
+                   hslogger >=1.2.3, directory >=1.2.0.1, datetime >=0.2.1,
+                   hspec >=1.9.2
     exposed-modules: ErpError ErpServer ErpModel Login Account Company
                      Currency FiscalYear Entity AccountAsset Bank Product Carrier
     exposed: True
@@ -40,27 +30,16 @@ library
                         DataKinds DeriveGeneric NoMonomorphismRestriction
                         OverlappingInstances
     hs-source-dirs: . src/server testsuite/tests src/common src/client
+    other-modules:
     ghc-options: -fhpc -DDEBUG
 
 executable erp
-        build-depends:    base -any
-                    , acid-state >= 0.12.1
-                    , websockets >= 0.8.2.0
-                    , mtl >= 2.1.2
-                    , containers -any
-                    , unordered-containers >= 0.2.3.0
-                    , safecopy >= 0.8.2
-                    , text >= 0.11.3.1
-                    , async >= 2.0.1.4
-                    , aeson >= 0.7.0.2
-                    , time >= 1.4.0.1
-                    , url >= 2.1.3
-                    , hslogger >= 1.2.3
-                    , directory >= 1.2.0.1
-                    , datetime >= 0.2.1
-                    , hspec >= 1.9.2
-                    , erp
-
+    build-depends: base -any, acid-state >=0.12.1,
+                   websockets >=0.8.2.0, mtl >=2.1.2, containers -any,
+                   unordered-containers >=0.2.3.0, safecopy >=0.8.2, text >=0.11.3.1,
+                   async >=2.0.1.4, aeson >=0.7.0.2, time >=1.4.0.1, url >=2.1.3,
+                   hslogger >=1.2.3, directory >=1.2.0.1, datetime >=0.2.1,
+                   hspec >=1.9.2, erp -any
     main-is: Main.hs
     buildable: True
     default-language: Haskell2010
@@ -71,24 +50,12 @@ executable erp
     other-modules:
 
 executable erp_ui
-    build-depends:    base -any
-                    , acid-state >= 0.12.1
-                    , websockets >= 0.8.2.0
-                    , mtl >= 2.1.2
-                    , containers -any
-                    , unordered-containers >= 0.2.3.0
-                    , safecopy >= 0.8.2
-                    , text >= 0.11.3.1
-                    , async >= 2.0.1.4
-                    , aeson >= 0.7.0.2
-                    , time >= 1.4.0.1
-                    , url >= 2.1.3
-                    , hslogger >= 1.2.3
-                    , directory >= 1.2.0.1
-                    , datetime >= 0.2.1
-                    , hspec >= 1.9.2
-                    , erp
-
+    build-depends: base -any, acid-state >=0.12.1,
+                   websockets >=0.8.2.0, mtl >=2.1.2, containers -any,
+                   unordered-containers >=0.2.3.0, safecopy >=0.8.2, text >=0.11.3.1,
+                   async >=2.0.1.4, aeson >=0.7.0.2, time >=1.4.0.1, url >=2.1.3,
+                   hslogger >=1.2.3, directory >=1.2.0.1, datetime >=0.2.1,
+                   hspec >=1.9.2, erp -any
     main-is: Main.hs
     buildable: True
     default-language: Haskell2010
@@ -99,25 +66,12 @@ executable erp_ui
     other-modules:
 
 test-suite tests
-    build-depends:    base -any
-                    , acid-state >= 0.12.1
-                    , websockets >= 0.8.2.0
-                    , mtl >= 2.1.2
-                    , containers -any
-                    , unordered-containers >= 0.2.3.0
-                    , safecopy >= 0.8.2
-                    , text >= 0.11.3.1
-                    , async >= 2.0.1.4
-                    , aeson >= 0.7.0.2
-                    , time >= 1.4.0.1
-                    , url >= 2.1.3
-                    , hslogger >= 1.2.3
-                    , directory >= 1.2.0.1
-                    , datetime >= 0.2.1
-                    , hspec >= 1.9.2
-                    , QuickCheck >= 2.6
-                    , erp
-
+    build-depends: base -any, acid-state >=0.12.1,
+                   websockets >=0.8.2.0, mtl >=2.1.2, containers -any,
+                   unordered-containers >=0.2.3.0, safecopy >=0.8.2, text >=0.11.3.1,
+                   async >=2.0.1.4, aeson >=0.7.0.2, time >=1.4.0.1, url >=2.1.3,
+                   hslogger >=1.2.3, directory >=1.2.0.1, datetime >=0.2.1,
+                   hspec >=1.9.2, QuickCheck >=2.6, erp -any
     type: exitcode-stdio-1.0
     main-is: TestRunner.hs
     buildable: True
