Request response needs to be cleaned up

--- a/erp.cabal
+++ b/erp.cabal
@@ -5,7 +5,7 @@ build-type: Simple
 license: GPL
 license-file: ""
 maintainer: dinkar.ganti@gmail.com
-homepage: TBD
+homepage: tbd
 synopsis: Create a data model for erp
 description: Create a data model for erp
 category: Business Application
