--- a/erp.cabal
+++ b/erp.cabal
@@ -22,6 +22,7 @@ library
                    hspec >=1.9.2
     exposed-modules: ErpError ErpServer ErpModel Login Account Company
                      Currency FiscalYear Entity AccountAsset Bank Product Carrier
+                     SystemSequence
     exposed: True
     buildable: True
     default-language: Haskell2010
