--- a/erp.cabal
+++ b/erp.cabal
@@ -20,9 +20,16 @@ library
                    async >=2.0.1.4, aeson >=0.7.0.2, time >=1.4.0.1, url >=2.1.3,
                    hslogger >=1.2.3, directory >=1.2.0.1, datetime >=0.2.1,
                    hspec >=1.9.2
-    exposed-modules: ErpError ErpServer ErpModel Login Account Company
+    exposed-modules: ErpError ErpServer ErpModel Login Account Company Country
                      Currency FiscalYear Entity AccountAsset Bank Product Carrier
-                     SystemSequence
+                     SystemSequence Forecast Invoice Production Project
+                     Purchase
+                     Sale
+                     Shipment
+                     Stock
+                     StaleObject
+                     Timesheet
+
     exposed: True
     buildable: True
     default-language: Haskell2010
