--- a/erp.cabal
+++ b/erp.cabal
@@ -21,6 +21,7 @@ library
                    async >=2.0.1.4, aeson >=0.7.0.2, time >=1.4.0.1, url >=2.1.3,
                    hslogger >=1.2.3, directory >=1.2.0.1, datetime >=0.2.1,
                    hspec >=1.9.2
+                   , transformers >= 0.3.0.0
     exposed-modules: ErpError ErpServer ErpModel Login Account Company Country
                      Currency FiscalYear Entity AccountAsset Bank Product Carrier
                      SystemSequence Forecast Invoice Production Project
