--- a/erp.cabal
+++ b/erp.cabal
@@ -4,7 +4,7 @@ version: 0.0.0.2
 cabal-version: >=1.16
 build-type: Simple
 license: GPL
-license-file: ""
+license-file: "license"
 maintainer: dinkar.ganti@gmail.com
 homepage: tbd
 synopsis: Create a data model for erp
@@ -16,7 +16,7 @@ extra-source-files: testsuite/tests/TestRunner.hs
 
 library
     build-depends: base -any, acid-state >=0.12.1,
-                   websockets >=0.8.2.0, mtl >=2.1.2, containers -any,
+                   websockets >=0.8.2.4, mtl >=2.1.2, containers -any,
                    unordered-containers >=0.2.3.0, safecopy >=0.8.2, text >=0.11.3.1,
                    async >=2.0.1.4, aeson >=0.7.0.2, time >=1.4.0.1, url >=2.1.3,
                    hslogger >=1.2.3, directory >=1.2.0.1, datetime >=0.2.1,
@@ -46,7 +46,7 @@ library
 
 executable erp
     build-depends: base -any, acid-state >=0.12.1,
-                   websockets >=0.8.2.0, mtl >=2.1.2, containers -any,
+                   websockets >=0.8.2.4, mtl >=2.1.2, containers -any,
                    unordered-containers >=0.2.3.0, safecopy >=0.8.2, text >=0.11.3.1,
                    async >=2.0.1.4, aeson >=0.7.0.2, time >=1.4.0.1, url >=2.1.3,
                    hslogger >=1.2.3, directory >=1.2.0.1, datetime >=0.2.1,
@@ -62,7 +62,7 @@ executable erp
 
 executable erp_ui
     build-depends: base -any, acid-state >=0.12.1,
-                   websockets >=0.8.2.0, mtl >=2.1.2, containers -any,
+                   websockets >=0.8.2.4, mtl >=2.1.2, containers -any,
                    unordered-containers >=0.2.3.0, safecopy >=0.8.2, text >=0.11.3.1,
                    async >=2.0.1.4, aeson >=0.7.0.2, time >=1.4.0.1, url >=2.1.3,
                    hslogger >=1.2.3, directory >=1.2.0.1, datetime >=0.2.1,
@@ -78,7 +78,7 @@ executable erp_ui
 
 test-suite tests
     build-depends: base -any, acid-state >=0.12.1,
-                   websockets >=0.8.2.0, mtl >=2.1.2, containers -any,
+                   websockets >=0.8.2.4, mtl >=2.1.2, containers -any,
                    unordered-containers >=0.2.3.0, safecopy >=0.8.2, text >=0.11.3.1,
                    async >=2.0.1.4, aeson >=0.7.0.2, time >=1.4.0.1, url >=2.1.3,
                    hslogger >=1.2.3, directory >=1.2.0.1, datetime >=0.2.1,
