--- a/erp.cabal
+++ b/erp.cabal
@@ -22,6 +22,10 @@ library
                    hslogger >=1.2.3, directory >=1.2.0.1, datetime >=0.2.1,
                    hspec >=1.9.2
                    , transformers >= 0.3.0.0
+                   , http-streams >= 0.7.2.2
+                   , io-streams >= 1.1.4.6
+                   , haste-compiler >= 0.4.3
+
     exposed-modules: ErpError ErpServer ErpModel Login Account Company Country
                      Currency FiscalYear Entity AccountAsset Bank Product Carrier
                      SystemSequence Forecast Invoice Production Project
@@ -32,7 +36,8 @@ library
                      StaleObject
                      Timesheet
                      IncomingRequestType
-
+                     Util.Calendar
+                     Erp.Util.DevOps.CloudFoundry
     exposed: True
     buildable: True
     default-language: Haskell2010
@@ -42,7 +47,7 @@ library
                         OverlappingInstances
                         MultiParamTypeClasses
 
-    hs-source-dirs: . src/server testsuite/tests src/common src/client
+    hs-source-dirs: . src/server testsuite/tests src/common src/client src
     other-modules: TestSpec ProductSpec SpecHelper
     ghc-options: -DDEBUG
 
@@ -53,6 +58,7 @@ executable erp
                    async >=2.0.1.4, aeson >=0.7.0.2, time >=1.4.0.1, url >=2.1.3,
                    hslogger >=1.2.3, directory >=1.2.0.1, datetime >=0.2.1,
                    hspec >=1.9.2, erp -any
+                   , http-streams >= 0.7.2.2
     main-is: Main.hs
     buildable: True
     default-language: Haskell2010
@@ -69,6 +75,8 @@ executable erp_ui
                    async >=2.0.1.4, aeson >=0.7.0.2, time >=1.4.0.1, url >=2.1.3,
                    hslogger >=1.2.3, directory >=1.2.0.1, datetime >=0.2.1,
                    hspec >=1.9.2, erp -any
+                   , http-streams >= 0.7.2.2
+
     main-is: Main.hs
     buildable: True
     default-language: Haskell2010
@@ -85,6 +93,8 @@ test-suite tests
                    async >=2.0.1.4, aeson >=0.7.0.2, time >=1.4.0.1, url >=2.1.3,
                    hslogger >=1.2.3, directory >=1.2.0.1, datetime >=0.2.1,
                    hspec >=1.9.2, QuickCheck >=2.6, erp -any
+                   , http-streams >= 0.7.2.2
+
     type: exitcode-stdio-1.0
     main-is: TestRunner.hs
     buildable: True
